fixed subject-to-change overlapping with event log

--- a/index.css
+++ b/index.css
@@ -160,6 +160,7 @@ event-card p {
 
 #subject-to-change {
 	position: sticky;
+	z-index: 10;
 	background: var(--col-bg);
 	border: 2px solid var(--col-main);
 	padding: var(--pad-1);
